@@ -23,6 +23,8 @@
 class Editor_Interactive;
 #include "map.h"
 #include "ui.h"
+#include "world.h"
+#include <vector>
 
 #define MAX_TOOL_AREA 6
 
@@ -255,6 +257,59 @@ class Editor_Set_Both_Terrain_Tool : public Editor_Tool {
       int m_terrain;
       Editor_Set_Down_Terrain_Tool* m_sdt;
       Editor_Set_Right_Terrain_Tool* m_srt;
+};
+
+/*
+=============================
+class Editor_Delete_Immovable_Tool
+
+this deletes immovables from the map
+=============================
+*/
+class Editor_Delete_Immovable_Tool : public Editor_Tool {
+   public:
+      Editor_Delete_Immovable_Tool() : Editor_Tool(this,this) { }
+      ~Editor_Delete_Immovable_Tool() { }
+
+      virtual int handle_click_impl(const Coords*, Field*, Map*, Editor_Interactive*);
+      virtual const char* get_fsel_impl(void) { return "pics/fsel_editor_delete.png"; }
+};
+
+/*
+=============================
+class Editor_Place_Immovable_Tool
+
+this places immovables on the map
+=============================
+*/
+class Editor_Place_Immovable_Tool : public Editor_Tool {
+   public:
+      Editor_Place_Immovable_Tool(Editor_Delete_Immovable_Tool* tool) : Editor_Tool(tool, tool) { 
+         m_nr_enabled=0; 
+      }
+      ~Editor_Place_Immovable_Tool() { }
+
+      virtual int handle_click_impl(const Coords*, Field*, Map*, Editor_Interactive*);
+      virtual const char* get_fsel_impl(void) { return "pics/fsel_editor_place_immovable.png"; }
+      
+      void enable_immovable(int n, bool t) { 
+         if((int)m_immovables_enabled.size()<(n+1)) 
+            m_immovables_enabled.resize(n+1,false);
+
+         if(m_immovables_enabled[n]==t) return;
+         m_immovables_enabled[n]=t;
+         if(t) ++m_nr_enabled; 
+         else --m_nr_enabled;  
+         assert(m_nr_enabled>=0); 
+      }
+      inline bool is_enabled(int n) {
+         if((int)m_immovables_enabled.size()<(n+1)) return false;
+         return m_immovables_enabled[n];
+      }
+      
+   private:
+      int m_nr_enabled;
+      std::vector<bool> m_immovables_enabled;
 };
 
 #endif // __S__EDITOR_TOOLS_H
